Change colors to make everything white

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">Launched</string>
-    <string name="hint_enter_a_message">Type a chatMessage…</string>
+    <string name="hint_enter_a_message">Type a message</string>
 </resources>
